# Agent-Course

./: .gitignore  README.md
第三章：langchain实战/test-to-sql-main/: .env.example  .gitignore  LangChain实战：用GLM-5构建Text-to-SQL智能体.md  README.md  agent.py  pyproject.toml  tutorial.ipynb
第三章：langchain实战/从零搭个能读年报、查实时行情的 AI 金融研究员/: 06-03 Data Ingestion for Deep RAG.ipynb
第三章：langchain实战/从零构建 AI 财经助手：LangChain + MCP + 多 Agent 实战教程/: .env.example  CLAUDE.md  Dockerfile  Makefile  README.md  finance_agent.py  mcp_config.json  pyproject.toml
第三章：langchain实战/从零构建 AI 财经助手：LangChain + MCP + 多 Agent 实战教程/agents/: __init__.py  analysis_agent.py  example_multi_agent.py  mcp_server.py  multi_agent_system.py  research_agent.py
第三章：langchain实战/从零构建 AI 财经助手：LangChain + MCP + 多 Agent 实战教程/api/: __init__.py  server_with_mcp.py
第三章：langchain实战/从零构建 AI 财经助手：LangChain + MCP + 多 Agent 实战教程/examples/: mcp_client_demo.py
第三章：langchain实战/从零构建 AI 财经助手：LangChain + MCP + 多 Agent 实战教程/finance_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
第三章：langchain实战/从零构建 AI 财经助手：LangChain + MCP + 多 Agent 实战教程/static/: app.js  index.html  style.css
第二章-langchain 基础旅行助手/lesson01/: requirements.txt  run.sh  simple_agent.py
第二章-langchain 基础旅行助手/lesson02/: agent_with_tools.py  main.py
第二章-langchain 基础旅行助手/lesson03/: agent_with_memory.py  requirements.txt  run.sh
第二章-langchain 基础旅行助手/lesson04/: requirements.txt
第二章-langchain 基础旅行助手/lesson05/: app.py  pyproject.toml  run.sh
第二章：langchain 基础旅行助手/lesson01/: simple_agent.py
第二章：langchain 基础旅行助手/lesson02/: README.md  pyproject.toml  (+3 more)
(+21 files in other folders)
